# coros_data_extractor

./: README.md  pyproject.toml
coros_data_extractor/: config.py  data.py  model.py
coros_data_extractor/data/: __init__.py  api_model.py  constants.py
