[tool.nbqa.config]
black = "pyproject.toml"

[tool.poetry]
name = "coros_data_extractor"
version = "0.1.0"
description = ""
authors = ["guillaume <guillaume.androz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[tool.black]
line-length = 120
exclude = '''
(
  /(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  )/
  | /docs/
  | /examples/
  | /tests/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
